B-F Backup Sandbox 30.4.12/src/objects/Promotion_Goal__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Bottle_Quantity__c</fullName>
        <description>Actual Bottle Quantity Sold/Used during promotion</description>
        <inlineHelpText>Enter the actual bottle quantity used or sold during the promotion</inlineHelpText>
        <label>Actual Bottle Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Bottle__c</fullName>
        <description>INFOWELDERS</description>
        <inlineHelpText>This field will be entered by Workflow</inlineHelpText>
        <label>Cost Per Bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custom_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created for Product Remediation process</description>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Promotion Goals</relationshipLabel>
        <relationshipName>Promotion_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Free_Bottle_Quantity__c</fullName>
        <description>INFOWELDERS</description>
        <label>Free Bottle Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <description>Locked = 1 
Unlocked = 0</description>
        <formula>if( Promotion__r.Promotion_Goal_Lock__c = True, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Locked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>Promotion__r.Market__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Cost__c</fullName>
        <description>INFOWELDERS - (Plan Bottle Qty + Free Bottle Qty)*Cost per Bottle</description>
        <formula>( Plan_Bottle_Quantity__c + Free_Bottle_Quantity__c ) *  Cost_Per_Bottle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Plan Bottle Qty + Free Bottle Qty)*Cost per Bottle</inlineHelpText>
        <label>Material Cost (f)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Material_Margin__c</fullName>
        <description>INFOWELDERS - Material Revenue - Material Cost</description>
        <formula>Material_Revenue__c - Material_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Material Revenue - Material Cost</inlineHelpText>
        <label>Material Margin (f)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Material_Revenue__c</fullName>
        <description>INFOWELDERS - Plan Bottle Qty * Sales Price per Bottle</description>
        <formula>Plan_Bottle_Quantity__c * Sale_Price_Per_Bottle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Plan Bottle Qty * Sales Price per Bottle</inlineHelpText>
        <label>Material Revenue (f)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Bottle_CHN_H__c</fullName>
        <description>Monthly Bottle (H)</description>
        <label>Monthly Bottle (H)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Bottle_L_CHN__c</fullName>
        <description>Monthly Bottle (L)</description>
        <label>Monthly Bottle (L)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Sponsor_APAC__c</fullName>
        <label>Other Sponsor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Per_Bottle_Rebate_CHN__c</fullName>
        <description>Per Bottle Rebate (H)</description>
        <label>Per Bottle Rebate (H)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Per_Bottle_Rebate_L__c</fullName>
        <description>Per Bottle Rebate(L)</description>
        <label>Per Bottle Rebate(L)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Per_Bottle_VDS__c</fullName>
        <label>Per Bottle VDS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_Bottle_Quantity__c</fullName>
        <description>INFOWELDERS</description>
        <label>Plan Bottle Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>INFOWELDERS</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Promotion Goals</relationshipLabel>
        <relationshipName>Promotion_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <description>Infowelders</description>
        <label>Promotion</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipLabel>Promotion Goals</relationshipLabel>
        <relationshipName>Promotion_Goals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sale_Price_Per_Bottle__c</fullName>
        <description>INFOWELDERS</description>
        <label>Sale Price Per Bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TTL_Vol_Target__c</fullName>
        <description>TTL Vol Target</description>
        <label>TTL Vol Target</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VDS_TTL_AP__c</fullName>
        <description>VDS TTL A&amp;P</description>
        <label>VDS TTL A&amp;P</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Promotion Goal</label>
    <nameField>
        <displayFormat>PG-{YYYY}{000000}</displayFormat>
        <label>Promotion Goal#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Goals</pluralLabel>
    <recordTypes>
        <fullName>Agreement</fullName>
        <active>true</active>
        <description>Agreement</description>
        <label>Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Locked</fullName>
        <active>true</active>
        <description>Locked - For Approved Promotions</description>
        <label>Locked</label>
    </recordTypes>
    <recordTypes>
        <fullName>Locked_Agreement</fullName>
        <active>true</active>
        <description>Locked Agreement</description>
        <label>Locked Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Promotion</fullName>
        <active>true</active>
        <description>Sales Promotion</description>
        <label>Sales Promotion</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Locked_Agreement</fullName>
        <active>false</active>
        <description>Validation Rules to prevent the end users from creating new Promotion Goal&apos;s after the Promotion was &quot;Approved&quot;)</description>
        <errorConditionFormula>And ( Locked__c  = 1, $Profile.Id  &lt;&gt; &quot;00e300000019nDA&quot;)</errorConditionFormula>
        <errorMessage>Promotion Goals - Locked!!
(Reason: Promotion already Approved)</errorMessage>
    </validationRules>
</CustomObject>